#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT(../utils/shutils.c)
AM_INIT_AUTOMAKE(libvispace,0.0.1)
AC_PROG_RANLIB
AC_PROG_INSTALL

AC_LANG_C
AC_PROG_CC
AC_PROG_MAKE_SET
# Checks for programs.

# Checks for libraries.

# Checks for header files.
#AC_CONFIG_HEADERS()
# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES(Makefile)
AC_OUTPUT
